@@ -335,6 +335,11 @@ Editor* Frame::editor() const
     return &d->m_editor;
 }
 
+CommandByName* Frame::command() const
+{
+    return &d->m_command;
+}
+
 TextGranularity Frame::selectionGranularity() const
 {
     return d->m_selectionGranularity;
@@ -1923,6 +1928,7 @@ FramePrivate::FramePrivate(Page* page, Frame* parent, Frame* thisFrame, Element*
     , m_selectionController(thisFrame)
     , m_caretBlinkTimer(thisFrame, &Frame::caretBlinkTimerFired)
     , m_editor(thisFrame, client)
+    , m_command(thisFrame)
     , m_caretVisible(false)
     , m_caretPaint(true)
     , m_isActive(false)
